# meta-prompting-and-context-engineering

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/commands/: issue.md
.claude/commands/docs/: api-routes.md  architecture.md  state-management.md
apps/backend/: package.json  tsconfig.json
apps/backend/scripts/: schema.sql  seed-db.ts  setup-db.ts
apps/backend/src/: db.ts  server.ts  types.ts
apps/backend/src/routes/: cart.ts  orders.ts  products.ts
apps/backend/src/services/: cart.service.ts  order.service.ts
apps/backend/src/webhooks/: payment.ts
apps/frontend/: index.html  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/api/: client.ts
apps/frontend/src/components/: Cart.tsx  OrderStatus.tsx  ProductList.tsx
apps/frontend/src/hooks/: useCart.ts  useOrder.ts  useProducts.ts
apps/frontend/src/pages/: CheckoutPage.tsx  HomePage.tsx
apps/frontend/src/store/: cartStore.ts
automation/: README.md  issue.py  pyproject.toml
automation/lib/: __init__.py  claude_client.py
docs/: ARCHITECTURE.md  SETUP.md  VIDEO_NOTES.md  VIDEO_RECORDING_CHECKLIST.md
examples/bugs/: 01-payment-webhook.md  02-cart-race-condition.md  03-order-status-sync.md  04-cart-total-calc.md
examples/outputs/: issue-payment-webhook.json
scripts/: reset.sh  setup.sh
